client/src/styles/site.scss
/* ... */
.trHighlight {
  background: lighten($color-black, 90%);
}
.btn-loader {
  position: relative;
  cursor: none;
  pointer-events: none;
  .showBtnLoader {
    background: none;
    padding: 4px;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    color: #fff;
    i.fa-spin {
      font-size: 1.5rem;
    }
  }
}
.globalSearchCntr {
  .mandatory {
    border: 1px solid #d9ae58 !important;
  }
  h6 {
    width: 100%;
    overflow: hidden;
    -o-text-overflow: ellipsis;
    text-overflow: ellipsis;
    white-space: nowrap;
    margin: 0;
    padding: 0 20px 0 7px;
    line-height: 26px;
    border: 1px solid #dededf;
    height: 30px;
    border-radius: 4px;
    font-size: 1rem;
    position: relative;
    i {
      position: absolute;
      right: 7px;
      top: 9px;
      font-size: 14px;
      color: #808080;
    }
    &:hover {
      background-color: lighten($primary-color, 60%);
      cursor: pointer;
    }
  }
}
.swal-text {
  color: lighten($color-black, 60%);
}
.swallHTMLMsg {
  margin: 0;
  padding: 0;
  list-style: none;
  border: 1px solid #ccc;
  font-size: 0.7rem;
  margin: 10px 0;
  width: 100%;
  text-align: left;
  tr {
    td {
      padding: 3px;
      border: 1px solid #ccc;
      span {
        display: inline-block;
        font-weight: bold;
      }
    }
  }
}

